[package]
name = "hook-dll"
version = "0.1.0"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hook_dll_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
ipmb = "0.8.4"
log = "0.4.29"
type-uuid = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.8"

[target.'cfg(windows)'.dependencies]
min_hook_rs = "2.1"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Networking_WinSock", "Win32_System_IO"] }
